golang/grpc-petstore: Create CRUD for Pet endpoint, stream for R
